--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -1,24 +1,24 @@
-<div class="container">
+<div class="container padding-corrected">
   <div class="row">
-    <h2 id="ad_placement">Place your add</h2>
-      <%= bootstrap_form_for(@ad) do |f| %>
+    <h2 id="ad_placement">Place your ad</h2>
+      <%= bootstrap_form_for(@ad, label_errors: true) do |f| %>
         <%= f.text_field :title %>
 
-        <%= f.number_field :price %>
+        <%= f.number_field :price, label: ' Price (in CAN $)'%>
 
         <%= f.collection_select(:brand_id, Brand.all, :id, :brand_name, :include_blank => 'Please select a brand') %>
 
-        <%= f.text_field :phone_name %>
+        <%= f.text_field :phone_name, label: 'Phone model' %>
 
-        <%= f.select :phone_condition, [['Never Used'], ['Like new (no signs of use or scratches)'], ['Great (minor signs of use or scratches)'],['Good (apparent scratches or dents)'],['Functional, but with problem (Please specify on the description)']], { label: "Condition" } %>
+        <%= f.select :phone_condition, [['Never Used'], ['Like new (no signs of use or scratches)'], ['Great (minor signs of use or scratches)'],['Good (apparent scratches or dents)'],['Functional, but with problem']], { label: "Condition" } %>
 
         <%= f.select :usage, [['Never Used'], ['Less than 3 months'], ['From 3 to 6 months'],['From 6 months to a year'],['From a year to a year and a half'],['From a year and a half to 2 years'],['From 2 to 3 years'],['From 3 to 4 years'], ['More than 4 years']], { label: "Usage time" } %>
 
-        <%= f.select :warranty, [['No'], ['Yes (Please specify on description)']], { label: "Warranty" } %>
+        <%= f.select :warranty, [['No'], ['Yes']], { label: "Warranty" } %>
 
         <%= f.collection_select(:carrier_id, Carrier.all, :id, :carrier_name, :include_blank => 'Please select a carrier') %>
 
-        <%= f.form_group :accessories, label: { text: "Accessories" }, help: "If other please specify on description" do %>
+        <%= f.form_group :accessories, label: { text: "Accessories" } do %>
 
           <%= f.check_box :accessories, {multiple: true}, 1 do %>
             Original receipt
@@ -57,9 +57,11 @@
           <%= f.check_box :accessories, {multiple: true}, 12 do %>
             Memory card
           <%end %>
-        <% end %>
 
-        <%= f.submit 'Create Ad!' %>
+          <%= f.text_area :description, placeholder: 'Add your description here', rows: 5 %>
+          <% end %>
+          
+        <%= f.submit 'Create Ad!', class: 'btn btn-lg btn-success' %>
       <% end %> <!-- end of the ad form -->
   </div> <!-- end of row -->
 </div> <!-- end of container -->
