--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -66,7 +66,9 @@
         <div class="col-lg-12">
           <p class = 'lead'> <strong>Accessories</strong></p>
             <ul>
-            
+              <% accessories_names(@ad).each do |accessory| %>
+                <li><%= accessory %></li>
+              <% end %>
             </ul>
         </div>
       </div>
@@ -82,10 +84,10 @@
     <div class="col-lg-3">
       <h3>Seller's Information</h3>
       <ul class="user-info">
-        <li><strong>Username:</strong><%= @ad.user.name %> </li>
-        <li><strong>Location:</strong><%= @ad.user.city %></li>
-        <li><strong>Email:</strong><%= @ad.user.email %></li>
-        <li><strong>Phone:</strong> <%= @ad.user.phone_number%></li>
+        <li><strong>Username: 
+        <li><strong>Location: 
+        <li><strong>Email:
+        <li><strong>Phone: 
       </ul>
       
       <h3>Send a message</h3>
