Display users number only if present

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,9 @@
         <li><strong>Name:</strong> <%= @user.name %></li>
         <li><strong>Location:</strong> <%= @user.city %>, <%= @user.province %></li>
         <li><strong>Email:</strong> <%= @user.email %></li>
-        <li><strong>Phone:</strong> <%= @user.phone_number %></li>
+        <% if @user.phone_number.present? %>
+          <li><strong>Phone:</strong> <%= @user.phone_number %></li>
+        <% end %>
       </ul>
     </div> <!-- End of user info -->
   </div> <!-- end of header row -->
