--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -52,7 +52,7 @@
               <tr>
                 <td><%= @ad.brand.brand_name %></td>
                 <td><%= @ad.phone_name %></td>
-                <td><%= @ad.phone_condition %></td>
+                <td><%= @ad.condition.condition_status %></td>
                 <td><%= @ad.usage %> </td>
                 <td><%= @ad.carrier.carrier_name %></td>
                 <td><%= @ad.warranty%></td>
