--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -35,32 +35,22 @@
           <%end%>
         </ul>
       </div> 
-
-      <div class="row filter">
-        <h4 class="filter-heading">Price</h4>
-        <div class="form-group">
-          <input type="text" class="form-control price-range" placeholder="Min">
-          to
-          <input type="text" class="form-control price-range" placeholder="Max">
-        </div>
-      </div> 
-
-      <div class="row filter">
-        <h4 class="filter-heading">Conditions</h4>
+      
+      <div class='row filter'>   
+        <h4 class="filter-heading">Condition</h4>
         <ul class="filter-list">
           <% for row in @search.facet(:condition_id).rows %>
-           <li> 
-            <% if params[:condition].blank? %>
-              <%= link_to Condition.find(row.value).condition_status, params.merge({ :condition => row.value}) %> (<%=row.count%>)
-            <%else%>
-              <%= Condition.find(row.value).condition_status%> (<%= link_to 'remove', params.merge({ :condition => nil}) %> )
-            <%end%>
+            <li> 
+             <% if params[:condition].blank? %>
+               <%= link_to Condition.find(row.value).condition_status, params.merge({ :condition => row.value}) %> (<%=row.count%>)
+             <%else%>
+               <%= Condition.find(row.value).condition_status%> (<%= link_to 'remove', params.merge({ :condition => nil}) %> )
+             <%end%>
             </li>
           <%end%>
-        </ul> 
-      </div>  
-
-       
+        </ul>
+      </div> 
+  
     </div> <!--end of filters column  -->
 
     <div class="col-lg-10">
