--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -5,7 +5,6 @@
       <div class="row filter">
         <h3> FILTERS</h3> 
       </div> <!-- end of filters heading -->
-
       <div class="row filter">
         <h4 class="filter-heading">Brand</h4>
         <ul class="filter-list">
@@ -61,10 +60,10 @@
           </p>
         </div>
         <div class="col-lg-6">
-          <div  class="pull-right">
-            <%= form_tag("/ads", method: 'get') do %>
-              <%= text_field_tag(:search) %>
-              <%= submit_tag("Search")%>
+          <div  class="pull-right form-group">
+            <%= form_tag("/ads", method: 'get', class: 'form-inline') do %>
+              <%= text_field_tag :search, nil, class: "form-control" %>
+              <%= submit_tag("Search", class:'btn btn-default')%>
             <%end%> 
           </div> 
         </div>
