--- a/app/views/ads/_ad.html.erb
+++ b/app/views/ads/_ad.html.erb
@@ -3,7 +3,7 @@
     <div class=" col-md-3 ">
       <div class="thumbnail phone-thumbnail">
       <%= link_to ad_path(a) do %>
-        <img class="model-image" src="/assets/bberry.jpg" alt="bberry">
+        <%= image_tag a.pictures.first.avatar_url, :style => "width: 200px; height: 200px;" %>
       <% end %>
       <div class="caption">
         <ul class="cell-info">
